Bug 379265 - Does not suspend if lid closed before display unplugged
Summary: Does not suspend if lid closed before display unplugged
Status: RESOLVED FIXED
Alias: None
Product: Powerdevil
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Plasma Development Mailing List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2017-04-26 21:03 UTC by Pascal d'Hermilly
Modified: 2017-05-08 16:57 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.10.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Pascal d'Hermilly 2017-04-26 21:03:51 UTC
When leaving work:
- If closing lid after external display cable is pulled, suspend happens.
- If closing lid before external display cable is pulled, suspend does not happen.

Result is that often my laptop stays turned on for hours in my backpack.

Expected behaviour: suspend should still happen if external screen is unplugged after lid is closed.

Thanks :-)
Comment 1 Kai Uwe Broulik 2017-04-26 21:06:51 UTC
Good idea. We re-trigger the suspend action when switching profiles (e.g. it should if you plug in/out AC) but not depending on screens disappearing, that is only checked in the instance of the lid being closed.
Comment 2 Kai Uwe Broulik 2017-04-26 21:23:35 UTC
Patch https://phabricator.kde.org/D5606
Comment 3 Pascal d'Hermilly 2017-04-26 22:27:14 UTC
Fantastic :-)
Comment 4 Kai Uwe Broulik 2017-05-08 16:57:25 UTC
Git commit c57301685cc628ab05a932067e4d506cc427163a by Kai Uwe Broulik.
Committed on 08/05/2017 at 16:56.
Pushed by broulik into branch 'master'.

Re-trigger lid action when lid is closed and external monitor is disconnected

When switching profiles we would re-trigger the lid action as needed but we wouldn't
for external monitor being disconnected.
FIXED-IN: 5.10.0

Differential Revision: https://phabricator.kde.org/D5606

M  +7    -0    daemon/actions/bundled/handlebuttonevents.cpp

https://commits.kde.org/powerdevil/c57301685cc628ab05a932067e4d506cc427163a