Re-trigger lid action when lid is closed and external monitor is disconnected

When switching profiles we would re-trigger the lid action as needed but we wouldn't
for external monitor being disconnected.

BUG: 379265
FIXED-IN: 5.10.0

Differential Revision: https://phabricator.kde.org/D5606